# Eka-Scribe-Android

./: .gitignore  AUDIO_QUALITY_METRICS.md  EKASCRIBE_SDK_DOCUMENTATION.md  README.md  TEST_APP_GUIDE.md  build.gradle.kts  config.properties  jitpack.yml  sdk.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/eka/voice2rx/: BaseApplication.kt  CallRecordingScanner.kt  ScribeAccessibilityService.kt  TestActivity.kt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml
docs/: LLD.md  audio-pipeline-analysis.md  getting-started.md  setup.md  usage-guide.md
ekascribe_sdk/: build.gradle.kts
ekascribe_sdk/src/androidTest/java/com/eka/scribe_sdk/: ExampleInstrumentedTest.kt
ekascribe_sdk/src/test/java/com/eka/scribe_sdk/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sample-java/: build.gradle.kts
sample-java/src/main/: AndroidManifest.xml
sample-java/src/main/res/layout/: activity_test.xml
sample-java/src/main/res/values/: colors.xml  strings.xml  themes.xml
scribesdk/: build.gradle.kts  consumer-rules.pro
scribesdk/src/androidTest/java/com/eka/scribesdk/: ExampleInstrumentedTest.kt
scribesdk/src/test/java/com/eka/scribesdk/: ExampleUnitTest.kt
voice2rx_sdk/: build.gradle.kts
voice2rx_sdk/src/main/cpp/: CMakeLists.txt  medgemma_jni.cpp
voice2rx_sdk/src/main/java/com/eka/voice2rx_sdk/: AudioCombiner.kt  AudioHelper.kt  AudioQualityAnalyzer.kt  AudioRecordModel.kt  UploadService.kt
(+228 files in other folders)
